js/js.translator/testData/incremental/invalidation/jsCodeWithConstString/lib1/js.2.kt
fun test() : dynamic {
    return js("var testObj = { $constKey: $constVal }; testObj.$constKey")
}
